--- a/Index.html
+++ b/Index.html
@@ -8,16 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h4 class="nav-title"><span class="text-primary">LOGO</span></h4>
             <ul>
             <li><a href=""><button class="btn-primary">Sign up</button></a></li>
            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+            <h2 class="banner-title">Cool Dark UI Template for<br>Webflow Agencies!</h2>
+             <button class="btn-primary">stay focused</button>
+         </div>
+        </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
